# cffc

./: .eleventy.js  .gitignore  CLAUDE.md  README.md  index.njk  package-lock.json  package.json  plants.njk  vercel.json
.github/workflows/: nightly-deploy.yml
_data/: plants.js  recipes.js
_includes/: layout.njk
css/: style.css
scripts/: American Plum.docx  Eastern redbud.docx  README.md  Red mulberry.docx  Staghorn sumac.docx  Witch hazel.docx  compress_images.sh  extract_from_pdf.py  plant_data.csv  pyproject.toml
scripts/plant_info_sheets/: American persimmon.docx  Red chokeberry.docx  Spicebush.docx
